summer-jaeb/tests/compile_fail/missing_return_type.stderr
error: #[event_listener] function must have an explicit return type (-> HandlerResult)
 --> tests/compile_fail/missing_return_type.rs:9:1
  |
9 | async fn on_event(event: &MyEvent) {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
